--- a/Dfiles/dockerfile
+++ b/Dfiles/dockerfile
@@ -6,7 +6,7 @@ ADD https://filesamples.com/samples/code/html/sample2.html .
 RUN echo "hellooo world"> hi.html
 CMD ["nginx"]
 ENTRYPOINT [ "-g","daemon off;" ]
-ONBUILD yum install git -y
-        yum install tree -y
+ONBUILD RUN yum install git -y
+        RUN yum install tree -y
 ENV "author"="uday"
     "course"="k8s"
