--- a/Dfiles/dockerfile
+++ b/Dfiles/dockerfile
@@ -4,8 +4,8 @@ RUN rm -rf /usr/share/nginx/html/index.html
 WORKDIR /usr/share/nginx/html/
 ADD https://filesamples.com/samples/code/html/sample2.html .
 RUN echo "hellooo world"> hi.html
-CMD ["nginx","-g"]
-ENTRYPOINT [ "daemon off;"]
+CMD ["google.com"]
+ENTRYPOINT [ "ping","-c5"]
 ONBUILD RUN yum install git -y
         RUN yum install tree -y
 ENV "author"="uday"
